Fixing memory allocation syntax and minor syntax bugs in test.cpp.

--- a/test/Makefile
+++ b/test/Makefile
@@ -17,10 +17,10 @@ CFLAGS = -std=c++11 -g -Wall
 #####
 
 # $ 'make' or 'make help'
-#help:
+help:
 	# INSTRUCTIONS:
 	#   To test array2.hpp, run: make output
-	#   To test memory allocation, run: make output && make mem_chk
+	#   To test memory allocation, run: make mem_chk
 	#   To remove compiled output files, run: make clean
 
 # $ make output
@@ -30,6 +30,7 @@ output: $(SOURCES) $(HSOURCES)
 
 # $ make mem_chk
 mem_chk: $(SOURCES) $(HSOURCES)
+	g++ $(CFLAGS) $(SOURCES) -o output
 	valgrind --leak-check=full ./output
 
 # $ make clean
