Updating Makefile with mem_chk.

--- a/test/Makefile
+++ b/test/Makefile
@@ -6,7 +6,7 @@ SOURCES  = ../int_array/int_array.c \
 HSOURCES = ../int_array/int_array.h
 
 # Compiler options
-CFLAGS = -std=c99 -g -lm -Wall
+CFLAGS = -std=c99 -g -Wall
 
 #####
 ###
@@ -20,12 +20,18 @@ CFLAGS = -std=c99 -g -lm -Wall
 help:
 	# INSTRUCTIONS:
 	#   To test int_array.h, run: make output
+	#   To test for memory allocation, run: make mem_chk
 	#   To remove compiled output files, run: make clean
 
 # $ make
 output: $(SOURCES) $(HSOURCES)
-	gcc $(CFLAGS) $(SOURCES) -o output
+	gcc $(CFLAGS) $(SOURCES) -o output -lm
 	# To execute the program, run: $ ./output
+
+# $ make mem_chk
+mem_chk: $(SOURCES) $(HSOURCES)
+	gcc $(CFLAGS) $(SOURCES) -o output -lm
+	valgrind --leak-check=full ./output
 
 # $ make clean
 # Removes created files
